--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_bloc: ^9.0.0
   flutter_rating_bar: ^4.0.1
   flutter_screenutil: ^5.9.3
+  flutter_spinkit: ^5.2.1
   flutter_svg: ^2.0.14
   get_it: ^8.0.2
   google_fonts: ^6.2.1
