--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.0.0
+  flutter_dotenv: ^5.2.1
   flutter_rating_bar: ^4.0.1
   flutter_screenutil: ^5.9.3
   flutter_spinkit: ^5.2.1
@@ -47,6 +48,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - .env
 flutter_assets:
   assets_path: assets/images/
   output_path: lib/
