--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,15 +38,15 @@ def keystoreProperties = new Properties()
    }
 android {
     namespace = "com.example.movies_app"
-    compileSdkVersion = flutter.compileSdkVersion
+    compileSdkVersion = 34
     ndkVersion = "27.0.12077973"
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_18
+        targetCompatibility JavaVersion.VERSION_18
     } 
        kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_17
+        jvmTarget = JavaVersion.VERSION_18
     }
 signingConfigs {
           release {
@@ -61,8 +61,8 @@ signingConfigs {
         applicationId "com.Dev.egyDead"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
+        minSdk = 21
+        targetSdk = 34
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
     }
@@ -80,4 +80,8 @@ signingConfigs {
 
 flutter {
     source '../..'
+}
+
+dependencies {
+    implementation 'com.google.android.gms:play-services-ads:22.1.0'
 }
