--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_svg: ^2.0.14
   get_it: ^8.0.2
   google_fonts: ^6.2.1
+  google_mobile_ads: ^5.3.1
   in_app_review: ^2.0.9
   package_info_plus: ^8.1.1
   skeletonizer: ^1.4.2
