Update version to 1.0.6+6 and modify VSCode settings for Postman dotenv detection

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["allprojects", "Cupertino", "subprojects", "Xlint"]
+  "cSpell.words": ["allprojects", "Cupertino", "subprojects", "Xlint"],
+  "postman.settings.dotenv-detection-notification-visibility": false
 }
