--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,12 @@ dependencies:
   url_launcher: ^6.3.1
 
 dev_dependencies:
-  build_runner: ^2.4.13
+  build_runner: ^2.4.14
+  custom_lint_builder: ^0.7.3
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
+  pubspec_dependency_sorter: ^1.0.5
 
 flutter:
   uses-material-design: true
